--- a/src/components/AreaPersonale/index.css
+++ b/src/components/AreaPersonale/index.css
@@ -27,6 +27,6 @@
   border: none;
   border-radius: 6px;
   box-shadow: 0 0 2px rgba(24, 24, 24, 0.45);
-  width: 500px;
-  height: 50px;
+  width: 30vw;
+  height: 5vh;
 }
