--- a/src/components/FriendCard/index.css
+++ b/src/components/FriendCard/index.css
@@ -1,6 +1,6 @@
 .FriendCard {
   padding: 10px;
-  width: 500px;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
