--- a/src/components/MessageCard/index.css
+++ b/src/components/MessageCard/index.css
@@ -5,7 +5,7 @@
   padding: 6px 20px;
   border-radius: 6px;
   box-shadow: 0 0 2px rgba(24, 24, 24, 0.45);
-  width: 500px;
+  width: 60vw;
   height: max-content;
 }
 
