--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,9 +1,11 @@
 .Navbar {
+  width: 100%;
   height: 100px;
   background-color: #edf2f4;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  gap: 5px;
 }
 
 .Navbar__actualUser {
@@ -13,6 +15,10 @@
   gap: 10px;
 }
 
-.Navbar__actualUser--avatar {
-  height: 85px;
+@media only screen and (max-width: 600px) {
+  .Navbar__actualUser {
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
