--- a/src/components/SectionIcon/index.css
+++ b/src/components/SectionIcon/index.css
@@ -1,8 +1,8 @@
 .SectionIcon {
   border: 1px solid #8d99ae;
   border-radius: 15px;
-  width: 60px;
-  height: 60px;
+  width: 10vw;
+  height: 10vw;
   padding: 5px 10px;
 }
 
