--- a/src/components/MessageCard/index.css
+++ b/src/components/MessageCard/index.css
@@ -5,7 +5,7 @@
   padding: 6px 20px;
   border-radius: 6px;
   box-shadow: 0 0 2px rgba(24, 24, 24, 0.45);
-  width: 60vw;
+  width: 500px;
   height: max-content;
 }
 
@@ -56,4 +56,11 @@
 .CommentCard__text {
   width: 200px;
   border: 1px blue;
+}
+
+@media only screen and (max-width: 600px) {
+  .MessageCard {
+    width: 60vw;
+    height: max-content;
+  }
 }
