--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,11 +1,19 @@
 .Navbar {
-  width: 100%;
+  width: 99vw;
   height: 100px;
   background-color: #edf2f4;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   gap: 5px;
+  overflow: hidden;
+}
+
+.Navbar__icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
 }
 
 .Navbar__actualUser {
@@ -16,6 +24,17 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .Navbar {
+    flex-direction: column;
+  }
+
+  .Navbar span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
   .Navbar__actualUser {
     display: none;
     align-items: center;
