--- a/src/components/SectionIcon/index.css
+++ b/src/components/SectionIcon/index.css
@@ -1,8 +1,8 @@
 .SectionIcon {
   border: 1px solid #8d99ae;
   border-radius: 15px;
-  width: 10vw;
-  height: 10vw;
+  width: 60px;
+  height: 60px;
   padding: 5px 10px;
 }
 
@@ -12,4 +12,12 @@
 
 .SectionIcon:active {
   box-shadow: rgba(43, 45, 66, 0.06) 0px 2px 4px 0px inset;
+}
+
+@media only screen and (max-width: 600px) {
+  .SectionIcon {
+    width: 10vw;
+    height: 10vw;
+    margin: 0;
+  }
 }
