--- a/src/components/WelcomeMSG/index.css
+++ b/src/components/WelcomeMSG/index.css
@@ -1,8 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap");
+
+.WelcomeMSG {
+  margin-top: 20px;
+  width: 90vw;
+  font-family: "Raleway Dots", cursive;
+}
+.WelcomeMSG__IMG {
+  width: 500px;
+}
+
 @media only screen and (max-width: 600px) {
   .WelcomeMSG {
-    width: 95vw;
   }
-  .WelcomeMSG img {
-    width: 50vw;
+  .WelcomeMSG__IMG {
+    width: 95vw;
   }
 }
