--- a/src/components/SectionIcon/index.css
+++ b/src/components/SectionIcon/index.css
@@ -8,12 +8,12 @@
 }
 
 .SectionIcon:hover {
-  box-shadow: rgba(43, 45, 66, 0.35) 0px 5px 15px;
+  /* box-shadow: rgba(43, 45, 66, 0.35) 0px 5px 15px; */
   color: #ef233c;
 }
 
 .SectionIcon:active {
-  box-shadow: rgba(43, 45, 66, 0.06) 0px 2px 4px 0px inset;
+  /* box-shadow: rgba(43, 45, 66, 0.06) 0px 2px 4px 0px inset; */
   color: #ef233c;
 }
 
