--- a/src/components/AreaPersonale/index.css
+++ b/src/components/AreaPersonale/index.css
@@ -14,6 +14,12 @@
   background-color: rgba(239, 35, 60, 0.8);
 }
 
+.AreaPersonale button:disabled {
+  background: #8d99ae;
+  color: #edf2f4;
+  cursor: no-drop;
+}
+
 .AreaPersonale form {
   display: flex;
   flex-direction: column;
